--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-web3==3.15.0
 ipfsapi==0.4.2
 keras==2.0.8
 tensorflow==1.3.0
-h5py-2.7.1
+h5py==2.7.1
+git+https://github.com/pipermerriam/web3.py.git@d44c29838f076f3b6feaead841cf94b603ccfd3f
